--- a/projekat/public/index.html
+++ b/projekat/public/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
 
     <title>My Budget</title>
+    <script src="https://kit.fontawesome.com/a328f27462.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
